# pc-pult

./: .gitignore  README.md  requirements.txt
.github/workflows/: build-apk.yml  build-exe.yml  release.yml
client/: main.py  pyproject.toml
server/: adb_helper.py  api_server.py  config.json  config_manager.py  gui_editor.py  key_handler.py  main.py
