[project]
name = "pk_pult"
version = "1.0.0"
description = "ПК-Пульт — мобильный клиент"
requires-python = ">=3.8"
dependencies = [
    "flet>=0.85.0",
]

[tool.flet.android]
artifact = "pk-pult"
product = "ПК-Пульт"
org = "com.pkpult"
bundle_id = "com.pkpult.app"
build_version = "1.0.0"
build_number = 2
manifest_application = { usesCleartextTraffic = "true" }
