[project]
name = "remote-hotkeys"
version = "1.0.0"
description = "Remote Hotkeys — мобильный клиент"
requires-python = ">=3.8"
dependencies = [
    "flet>=0.85.0",
]

[tool.flet.android]
artifact = "remote-hotkeys"
product = "Remote Hotkeys"
org = "com.remotehotkeys"
bundle_id = "com.remotehotkeys.app"
build_version = "1.0.0"
build_number = 2
manifest_application = { usesCleartextTraffic = "true" }
