[project]
name = "remote-hotkeys"
version = "1.0.0"
description = "Remote Hotkeys — мобильный клиент"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.70.0.dev0",
]

[tool.flet.app]
path = "."

[tool.flet.android]
artifact = "remote-hotkeys"
product = "Remote Hotkeys"
org = "com.remotehotkeys"
bundle_id = "com.remotehotkeys.app"
build_version = "1.0.0"
build_number = 3
manifest_application = { usesCleartextTraffic = "true" }
